import "KeyExceptionPackageResponse.proto";


option java_outer_classname="BulkInsertResponseProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message BulkInsertResponse 
{
	optional KeyExceptionPackageResponse keyExceptionPackage = 1;
}